.metadata/.plugins/org.eclipse.cdt.ui/1.build.log
06:10:18 **** Incremental Build of configuration Debug for project 1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:28:2: error: expected declaration or statement at end of input
  scanf("%d", &n);
  ^~~~~

06:10:18 Build Finished (took 206ms)

